--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "experimentalDecorators": true,
     "removeComments": true,
     "noImplicitAny": true,
+    "lib": ["es2017"],
     "noLib": false,
     "preserveConstEnums": true,
     "ignoreDeprecations": "5.0",
